Examples/ApphudDemoSwiftUI/Pods/AppMetricaCrashes/AppMetricaCrashes/Sources/CrashModels/Crash/Error/AMACppException.m

#import "AMACppException.h"

@implementation AMACppException

- (instancetype)initWithName:(NSString *)name
{
    self = [super init];
    if (self != nil) {
        _name = [name copy];
    }

    return self;
}

@end
